--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="author" content="Uvindu Sanketh">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uvindu Sanketh</title>
 </head>
 <body>
-<h1>Uvindu sanketh</h1>
+<!--header-->
+<header>
+    <h3>SANKETH</h3>
+    <nav>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Education</a>
+        <a href="">My work</a>
+        <a href="">Assingment</a>
+        <a href="">Gallery</a>
+        <a href="">Contact us</a>
+    </nav>
+
+</header>
+
+
+
+
 </body>
 </html>
