create home section and add background photo and tittle name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
     </nav>
 
 </header>
+<!--home Section-->
+<section>
+    <div>
+        <img src="../assets/homeBg.jpeg"title="home"alt="home background">
+        <h1>Uvindu Sanketh Weerasinghe</h1>
+    </div>
 
+
+</section>
 
 
 
