add facebook profile in home section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         <img src="../assets/homeBg.jpeg"title="home"alt="home background">
         <h1>Uvindu Sanketh Weerasinghe</h1>
     </div>
+    <!--social media icon bar-->
+    <div>
+        <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
+            <img id="facebook" src="../assets/facebook.png"title="facebook"alt="go to facebook profile">
+        </a>
 
+
+    </div>
 
 </section>
 
