add github profile in home section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
             <img id="facebook" src="../assets/facebook.png"title="facebook"alt="go to facebook profile">
         </a>
+        <a href="https://github.com/UvinduV">
+            <img id="github" src="../assets/github.png"title="github"alt="go to github profile">
 
 
     </div>
