add linkedin profile in home section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         </a>
         <a href="https://github.com/UvinduV">
             <img id="github" src="../assets/github.png"title="github"alt="go to github profile">
-
+        </a>
+        <a href="https://www.linkedin.com/in/uvindu-weerasinghe-793916283/">
+            <img id="linkedin" src="../assets/linkedin.png"title="linkedin"alt="go to linedin profile">
+        </a>
 
     </div>
 
