add gmail address in home section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="https://www.linkedin.com/in/uvindu-weerasinghe-793916283/">
             <img id="linkedin" src="../assets/linkedin.png"title="linkedin"alt="go to linedin profile">
         </a>
+        <a href="uvindusanketh470@gmail.com">
+            <img id="gmail" src="../assets/gmail.png"title="gmail"alt="send mail">
+        </a>
 
     </div>
 
