add medium profile in home section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <a href="uvindusanketh470@gmail.com">
             <img id="gmail" src="../assets/gmail.png"title="gmail"alt="send mail">
         </a>
+        </a>
+        <a href="https://medium.com/@uvindusanketh470">
+            <img id="medium" src="../assets/mediumn.png"title="medium"alt="go to medium profile">
+        </a>
+
 
     </div>
 
