organize home section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <h3>SANKETH</h3>
     <nav>
-        <a href="">Home</a>
+        <a href="#home">Home</a>
         <a href="">About Us</a>
         <a href="">Education</a>
         <a href="">My work</a>
@@ -19,33 +19,37 @@
         <a href="">Gallery</a>
         <a href="">Contact us</a>
     </nav>
+    <br>
 
 </header>
 <!--home Section-->
-<section>
+<section id="home">
     <div>
-        <img src="../assets/homeBg.jpeg"title="home"alt="home background">
-        <h1>Uvindu Sanketh Weerasinghe</h1>
-    </div>
-    <!--social media icon bar-->
-    <div>
-        <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
-            <img id="facebook" src="../assets/facebook.png"title="facebook"alt="go to facebook profile">
-        </a>
-        <a href="https://github.com/UvinduV">
-            <img id="github" src="../assets/github.png"title="github"alt="go to github profile">
-        </a>
-        <a href="https://www.linkedin.com/in/uvindu-weerasinghe-793916283/">
-            <img id="linkedin" src="../assets/linkedin.png"title="linkedin"alt="go to linedin profile">
-        </a>
-        <a href="uvindusanketh470@gmail.com">
-            <img id="gmail" src="../assets/gmail.png"title="gmail"alt="send mail">
-        </a>
-        </a>
-        <a href="https://medium.com/@uvindusanketh470">
-            <img id="medium" src="../assets/mediumn.png"title="medium"alt="go to medium profile">
-        </a>
+        <img src="../assets/home-section/homebg.JPG"title="home"alt="home background" width="1366" height="768">
 
+        <div>
+            <h1>Uvindu Sanketh Weerasinghe</h1>
+        </div>
+
+    <!--social media icon bar-->
+        <div>
+            <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
+                <img id="facebook" src="../assets/home-section/facebook.png"title="facebook"alt="go to facebook profile" width="60" height="60">
+            </a>
+            <a href="https://github.com/UvinduV">
+                <img id="github" src="../assets/home-section/github.png"title="github"alt="go to github profile"width="50"height="50">
+            </a>
+            <a href="https://www.linkedin.com/in/uvindu-weerasinghe-793916283/">
+                <img id="linkedin" src="../assets/home-section/linkedin.png"title="linkedin"alt="go to linedin profile"width="60"height="60">
+            </a>
+            <a href="uvindusanketh470@gmail.com">
+                <img id="gmail" src="../assets/home-section/gmail.png"title="gmail"alt="send mail"width="65"height="75">
+            </a>
+            <a href="https://medium.com/@uvindusanketh470">
+                <img id="medium" src="../assets/home-section/mediumn.png"title="medium"alt="go to medium profile"width="80" height="80">
+            </a>
+        </div>
+        <br>
 
     </div>
 
