add other text in home section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <img src="../assets/home-section/homebg.JPG"title="home"alt="home background" width="1366" height="768">
 
         <div>
+            <h2>Hi There,</h2>
             <h1>Uvindu Sanketh Weerasinghe</h1>
         </div>
 
