--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Uvindu Sanketh">
@@ -22,17 +22,18 @@
     <br>
 
 </header>
+
 <!--home Section-->
 <section id="home">
     <div>
-        <img src="../assets/home-section/homebg.JPG"title="home"alt="home background" width="1366" height="768">
+        <img src="../assets/home-section/homebackg.JPG"title="home"alt="home background" width="1366" height="768">
 
         <div>
             <h2>Hi There,</h2>
-            <h1>Uvindu Sanketh Weerasinghe</h1>
+            <h1><strong>Uvindu Sanketh Weerasinghe</strong></h1>
         </div>
 
-    <!--social media icon bar-->
+        <!--social media icon bar-->
         <div>
             <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
                 <img id="facebook" src="../assets/home-section/facebook.png"title="facebook"alt="go to facebook profile" width="60" height="60">
@@ -50,11 +51,13 @@
                 <img id="medium" src="../assets/home-section/mediumn.png"title="medium"alt="go to medium profile"width="80" height="80">
             </a>
         </div>
-        <br>
 
     </div>
+    <br><br>
 
 </section>
+
+
 
 
 
