--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Uvindu Sanketh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uvindu Sanketh</title>
+
 </head>
 <body>
 <!--header-->
@@ -12,7 +13,7 @@
     <h3>SANKETH</h3>
     <nav>
         <a href="#home">Home</a>
-        <a href="">About Us</a>
+        <a href="#about">About Us</a>
         <a href="">Education</a>
         <a href="">My work</a>
         <a href="">Assingment</a>
@@ -57,7 +58,11 @@
 
 </section>
 
+<!--About Us section-->
+<section id="about">
 
+
+</section>
 
 
 
