add title in about section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 
 <!--About Us section-->
 <section id="about">
+    <div>
+        <div>
+            <h1>Education</h1>
+            <hr>
+        </div>
+
+    </div>
 
 
 </section>
