refactor title in about section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <section id="about">
     <div>
         <div>
-            <h1>Education</h1>
+            <h1>About me</h1>
             <hr>
         </div>
 
