add description in about me

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div>
             <h2>Hi There,</h2>
             <h1><strong>Uvindu Sanketh Weerasinghe</strong></h1>
+            <br>
         </div>
 
         <!--social media icon bar-->
@@ -61,13 +62,24 @@
 <!--About Us section-->
 <section id="about">
     <div>
+        <!--title in about -->
         <div>
             <h1>About me</h1>
             <hr>
+            <br>
+        </div>
+        <div>
+            <!--describe paragraph-->
+            <div>
+                <p>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp I'm Uvindu Sanketh Weerasinghe. I'm 22 years old. I'm passionate and driven software engineering student at Institute of Software Engineering(IJSE) and living in Gampaha, Sri Lanaka. I enjoy solving problems through coding and have a solid understanding of programming languages and software development.
+                </p>
+            </div>
+
         </div>
 
-    </div>
 
+    </div>
 
 </section>
 
