add profile image in about me

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp I'm Uvindu Sanketh Weerasinghe. I'm 22 years old. I'm passionate and driven software engineering student at Institute of Software Engineering(IJSE) and living in Gampaha, Sri Lanaka. I enjoy solving problems through coding and have a solid understanding of programming languages and software development.
                 </p>
             </div>
-
+            <!--profile image-->
+            <div>
+                <img src="../assets/AboutUs-section/about.JPG"width="380"height="400">
+                <br>
+            </div>
         </div>
 
 
