add download cv btn in about section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
                 <br>
             </div>
         </div>
-
+        <!--cv download btn-->
+        <div>
+            <a href="" DOWNLOAD="">Download CV</a>
+        </div>
 
     </div>
 
