create education section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<!--About Us section-->
+<!--About Me section-->
 <section id="about">
     <div>
         <!--title in about -->
@@ -88,6 +88,13 @@
 
     </div>
 
+</section>
+
+<!--Education Section-->
+<section>
+    <div>
+
+    </div>
 </section>
 
 
