refactor description in about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Uvindu Sanketh">
@@ -72,7 +72,11 @@
             <!--describe paragraph-->
             <div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp I'm Uvindu Sanketh Weerasinghe. I'm 22 years old. I'm passionate and driven software engineering student at Institute of Software Engineering(IJSE) and living in Gampaha, Sri Lanaka. I enjoy solving problems through coding and have a solid understanding of programming languages and software development.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I'm&nbsp;Uvindu Sanketh Weerasinghe.
+                    &nbsp;I'm 22 years old.
+                    I'm passionate and driven software engineering student at
+                    <span><a href="https://www.ijse.lk/">Institute of Software Engineering(IJSE)</a></span>and living in Gampaha, Sri Lanaka.
+                    &nbsp;I enjoy&nbsp;solving problems through coding and have a solid understanding of programming languages and software development.
                 </p>
             </div>
             <!--profile image-->
@@ -93,7 +97,15 @@
 <!--Education Section-->
 <section>
     <div>
+       <!--title in edu section-->
+        <div>
+            <h1>Education</h1>
+            <hr>
+            <br>
+        </div>
+        <div>
 
+        </div>
     </div>
 </section>
 
