add ijse sec in edu section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
             <br>
         </div>
         <div>
+            <!--ijse sec-->
+            <div>
+                <!--tittle & icon-->
+                <div>
+                    <div>
+                        <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                    </div>
+                    <div>
+                        <h2> IJSE</h2>
+                    </div>
+                </div>
+                <!--disc-->
+                <div>
+                    <p>
+                        BSc (Hons) In Computer Science
+                        <br><br>
+                        Institute Of Software Engineering Panadura.
+                    </p>
+                </div>
+            </div>
+
+
 
         </div>
     </div>
