add imbs sec in edu section

--- a/index.html
+++ b/index.html
@@ -96,38 +96,57 @@
 
 <!--Education Section-->
 <section>
+    <!--title in edu section-->
     <div>
-       <!--title in edu section-->
+        <h1>Education</h1>
+        <hr>
+        <br>
+    </div>
+    <div>
+        <!--ijse sec-->
         <div>
-            <h1>Education</h1>
-            <hr>
-            <br>
-        </div>
-        <div>
-            <!--ijse sec-->
+            <!--tittle & icon-->
             <div>
-                <!--tittle & icon-->
                 <div>
-                    <div>
-                        <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
-                    </div>
-                    <div>
-                        <h2> IJSE</h2>
-                    </div>
+                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
                 </div>
-                <!--disc-->
                 <div>
-                    <p>
-                        BSc (Hons) In Computer Science
-                        <br><br>
-                        Institute Of Software Engineering Panadura.
-                    </p>
+                    <h3> IJSE</h3>
                 </div>
             </div>
-
-
-
+            <!--disc-->
+            <div>
+                <p>
+                    BSc (Hons) In Computer Science
+                    <br><br>
+                    Institute Of Software Engineering Panadura.
+                </p>
+            </div>
         </div>
+
+        <!--imbs sec-->
+        <div>
+            <!--title & icon-->
+            <div>
+                <div>
+                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                </div>
+                <div>
+                    <h3> IMBS</h3>
+                </div>
+            </div>
+            <!--disc-->
+            <div>
+                <p>
+                    Diploma in IT
+                    <br><br>
+                    IMBS Green Campus,
+                    Gampaha.
+                </p>
+            </div>
+        </div>
+
+
     </div>
 </section>
 
