add a/l sec in edu section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,29 @@
             </div>
         </div>
 
+        <!--A/l sec-->
+        <div>
+            <!--tittle & icon-->
+            <div>
+                <div>
+                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                </div>
+                <div>
+                    <h3>Advanced-Level</h3>
+                </div>
+            </div>
+            <!--disc-->
+            <div>
+                <p>
+                    2020 A/L Examination - Maths Stream
+                    <br><br>
+                    WP/GM/ Sangabodhi National College,
+                    Nittambuwa.
+                </p>
+            </div>
+        </div>
+
+
 
     </div>
 </section>
