add o/l sec in edu section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,27 @@
             </div>
         </div>
 
-
+        <!--o/l sec-->
+        <div>
+            <!--tittle & icon-->
+            <div>
+                <div>
+                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                </div>
+                <div>
+                    <h3>Ordinary-Level</h3>
+                </div>
+            </div>
+            <!--disc-->
+            <div>
+                <p>
+                    2017 O/L Examination
+                    <br><br>
+                    WP/KE/ Amabagaspitiya Maha Vidyalaya,
+                    Yakkala.
+                </p>
+            </div>
+        </div>
 
     </div>
 </section>
