--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
-        <a href="">Education</a>
+        <a href="#edu">Education</a>
         <a href="">My work</a>
         <a href="">Assingment</a>
         <a href="">Gallery</a>
@@ -95,7 +95,7 @@
 </section>
 
 <!--Education Section-->
-<section>
+<section id="edu">
     <!--title in edu section-->
     <div>
         <h1>Education</h1>
@@ -192,7 +192,6 @@
 
     </div>
 </section>
-
 
 
 </body>
