--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </header>
 
-<!--home Section-->
+<!--/// home Section ///-->
 <section id="home">
     <div>
         <img src="../assets/home-section/homebackg.JPG"title="home"alt="home background" width="1366" height="768">
@@ -59,7 +59,7 @@
 
 </section>
 
-<!--About Me section-->
+<!--/// About Me section ///-->
 <section id="about">
     <div>
         <!--title in about -->
@@ -68,33 +68,28 @@
             <hr>
             <br>
         </div>
+        <!--left side -->
         <div>
-            <!--describe paragraph-->
-            <div>
-                <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I'm&nbsp;Uvindu Sanketh Weerasinghe.
-                    &nbsp;I'm 22 years old.
-                    I'm passionate and driven software engineering student at
-                    <span><a href="https://www.ijse.lk/">Institute of Software Engineering(IJSE)</a></span>and living in Gampaha, Sri Lanaka.
-                    &nbsp;I enjoy&nbsp;solving problems through coding and have a solid understanding of programming languages and software development.
-                </p>
-            </div>
-            <!--profile image-->
-            <div>
-                <img src="../assets/AboutUs-section/about.JPG"width="380"height="400">
-                <br>
-            </div>
-        </div>
-        <!--cv download btn-->
-        <div>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I'm&nbsp;Uvindu Sanketh Weerasinghe.
+                &nbsp;I'm 22 years old.
+                I'm passionate and driven software engineering student at
+                <span><a href="https://www.ijse.lk/">Institute of Software Engineering(IJSE)</a></span>and living in Gampaha, Sri Lanaka.
+                &nbsp;I enjoy&nbsp;solving problems through coding and have a solid understanding of programming languages and software development.
+            </p>
             <a href="" DOWNLOAD="">Download CV</a>
+        </div>
+        <!--right side - profile image-->
+        <div>
+            <img src="../assets/AboutUs-section/about.JPG"width="380"height="400">
+            <br>
         </div>
 
     </div>
 
 </section>
 
-<!--Education Section-->
+<!--/// Education Section ///-->
 <section id="edu">
     <!--title in edu section-->
     <div>
