--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <!--right side - profile image-->
         <div>
-            <img src="../assets/AboutUs-section/about.JPG"width="380"height="400">
+            <img src="../assets/AboutUs-section/about.JPG"title="Sanketh"alt="profile-image" width="380"height="400">
             <br>
         </div>
 
@@ -103,7 +103,7 @@
             <!--tittle & icon-->
             <div>
                 <div>
-                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                    <img src="../assets/Education-section/edu-icon.png"title="education"alt="edu-icon" width="50"height="50">
                 </div>
                 <div>
                     <h3> IJSE</h3>
@@ -124,7 +124,7 @@
             <!--title & icon-->
             <div>
                 <div>
-                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                    <img src="../assets/Education-section/edu-icon.png"title="education"alt="edu-icon"width="50"height="50">
                 </div>
                 <div>
                     <h3> IMBS</h3>
@@ -146,7 +146,7 @@
             <!--tittle & icon-->
             <div>
                 <div>
-                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                    <img src="../assets/Education-section/edu-icon.png"title="education"alt="edu-icon"width="50"height="50">
                 </div>
                 <div>
                     <h3>Advanced-Level</h3>
@@ -168,7 +168,7 @@
             <!--tittle & icon-->
             <div>
                 <div>
-                    <img src="../assets/Education-section/edu-icon.png"width="50"height="50">
+                    <img src="../assets/Education-section/edu-icon.png"title="education"alt="edu-icon"width="50"height="50">
                 </div>
                 <div>
                     <h3>Ordinary-Level</h3>
