create skills section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,14 @@
     <br><br>
 </section>
 
-
+<!--/// Skills section ///-->
+<section>
+    <div>
+        <h1>Experiences & Skills</h1>
+        <hr>
+        <br>
+    </div>
+</section>
 
 </body>
 </html>
