add tittle tags skills section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
         <hr>
         <br>
     </div>
+    <div>
+        <h3>Tutoring</h3>
+    </div>
+    <!--skills-->
+    <div>
+        <h3>Team Working</h3>
+    </div>
+    <div>
+        <h3>Good Communication</h3>
+    </div>
+
+
 </section>
 
 </body>
