add images skills section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,27 @@
     <div>
         <h3>Good Communication</h3>
     </div>
-
+    <br><br>
+    <!--bottom---images-->
+    <div>
+        <div>
+            <img src="../assets/Skills-section/html.png"title="html"alt="html-icon"width="60"height="60">
+            <img src="../assets/Skills-section/css.png"title="css"alt="css-icon"width="60"height="60">
+            <img src="../assets/Skills-section/java.png"title="java"alt="java-icon"width="60"height="60">
+            <img src="../assets/Skills-section/mysql.png"title="mysql"alt="mysql-icon"width="60"height="60">
+            <img src="../assets/Skills-section/hibernate.png"title="hibernate"alt="hibernate-icon"width="60"height="60">
+            <img src="../assets/Skills-section/java-script.png"title="java-script"alt="js-icon"width="60"height="60">
+            <img src="../assets/Skills-section/figma.png"title="figma"alt="figmaicon"width="60"height="60">
+        </div>
+        <div>
+            <img src="../assets/Skills-section/Visual_Studio.png"title="visual-studio"alt="vs-icon"width="60"height="60">
+            <img src="../assets/Skills-section/NetBeans.png"title="netbeans"alt="netbeans-icon"width="60"height="60">
+            <img src="../assets/Skills-section/IntelliJ_IDEA.png"title="intellij"alt="intellij-icon"width="60"height="60">
+            <img src="../assets/Skills-section/SceneBuilderLogo.png"title="scenebulider"alt="scenebulider-icon"width="60"height="60">
+            <img src="../assets/Skills-section/githubskills.png"title="github"alt="github-icon"width="60"height="60">
+        </div>
+    </div>
+    <br><br>
 
 </section>
 
