add left side in skills section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <span><a href="https://www.ijse.lk/">Institute of Software Engineering(IJSE)</a></span>and living in Gampaha, Sri Lanaka.
             &nbsp;I enjoy&nbsp;solving problems through coding and have a solid understanding of programming languages and software development.
         </p>
-        <a href="" DOWNLOAD="">Download CV</a>
+        <button type="button">Download CV</button>
+        <br>
     </div>
     <!--right side - profile image-->
     <div>
@@ -194,18 +195,32 @@
         <hr>
         <br>
     </div>
+    <!--left side-->
     <div>
-        <h3>Tutoring</h3>
-    </div>
-    <!--skills-->
-    <div>
-        <h3>Team Working</h3>
-    </div>
-    <div>
-        <h3>Good Communication</h3>
+        <div>
+            <p>
+                "Proficient in key skills such as <br>
+                teamwork, communication, and <br>
+                adaptability. Demonstrated <br>
+                ability to collaborate effectively <br>
+                and convey ideas clearly for <br>
+                successful outcomes. Adaptable <br>
+                to various tasks and <br>
+                environments."
+            </p>
+        </div>
+        <div>
+            Team working
+        </div>
+        <div>
+            communication
+        </div>
+        <div>
+            adaptability
+        </div>
     </div>
     <br><br>
-    <!--bottom---images-->
+    <!--right side-->
     <div>
         <div>
             <img src="../assets/Skills-section/html.png"title="html"alt="html-icon"width="60"height="60">
@@ -213,15 +228,15 @@
             <img src="../assets/Skills-section/java.png"title="java"alt="java-icon"width="60"height="60">
             <img src="../assets/Skills-section/mysql.png"title="mysql"alt="mysql-icon"width="60"height="60">
             <img src="../assets/Skills-section/hibernate.png"title="hibernate"alt="hibernate-icon"width="60"height="60">
-            <img src="../assets/Skills-section/java-script.png"title="java-script"alt="js-icon"width="60"height="60">
             <img src="../assets/Skills-section/figma.png"title="figma"alt="figmaicon"width="60"height="60">
         </div>
         <div>
+            <img src="../assets/Skills-section/githubskills.png"title="github"alt="github-icon"width="60"height="60">
+            <img src="../assets/Skills-section/java-script.png"title="java-script"alt="js-icon"width="60"height="60">
             <img src="../assets/Skills-section/Visual_Studio.png"title="visual-studio"alt="vs-icon"width="60"height="60">
             <img src="../assets/Skills-section/NetBeans.png"title="netbeans"alt="netbeans-icon"width="60"height="60">
             <img src="../assets/Skills-section/IntelliJ_IDEA.png"title="intellij"alt="intellij-icon"width="60"height="60">
             <img src="../assets/Skills-section/SceneBuilderLogo.png"title="scenebulider"alt="scenebulider-icon"width="60"height="60">
-            <img src="../assets/Skills-section/githubskills.png"title="github"alt="github-icon"width="60"height="60">
         </div>
     </div>
     <br><br>
