--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <!--/// Skills section ///-->
 <section>
     <div>
-        <h1>Experiences & Skills</h1>
+        <h1>Skills</h1>
         <hr>
         <br>
     </div>
@@ -240,6 +240,11 @@
         </div>
     </div>
     <br><br>
+
+</section>
+
+<!--/// project section ///-->
+<section>
 
 </section>
 
