create project section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,11 @@
 
 <!--/// project section ///-->
 <section>
-
+    <div>
+        <h1>Projects</h1>
+        <hr>
+        <br>
+    </div>
 </section>
 
 </body>
