add porjects in project section

--- a/index.html
+++ b/index.html
@@ -250,6 +250,35 @@
         <hr>
         <br>
     </div>
+    <div>
+        <h3>carepoint</h3>
+        <img src="../assets/Project-section/carepoint.PNG"title="carepoint"alt="carepoint-image"width="250"height="150">
+        <a href="https://github.com/UvinduV/carepoint-layerd.git">
+            <button type="button">
+                view
+            </button>
+        </a>
+    </div>
+    <br>
+    <div>
+        <h3>chat-app</h3>
+        <img src="../assets/Project-section/Chat- Application.png"title="chat-app"alt="chatApp-image"width="250"height="150">
+        <a href="https://github.com/UvinduV/live-chat-applicaton.git">
+            <button type="button">
+                view
+            </button>
+        </a>
+    </div>
+    <br>
+    <div>
+        <h3>connect four</h3>
+        <img src="../assets/Project-section/connectForgame.png"title="connect-four"alt="connectFour-image"width="250"height="150">
+        <a href="https://github.com/UvinduV/connect-four-game-assignment.git">
+            <button type="button">
+                view
+            </button>
+        </a>
+    </div>
 </section>
 
 </body>
