--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <h3>SANKETH</h3>
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About Us</a>
+        <a href="#about">About</a>
         <a href="#edu">Education</a>
-        <a href="">My work</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="">Assingment</a>
         <a href="">Gallery</a>
-        <a href="">Contact us</a>
+        <a href="">Contact </a>
     </nav>
     <br>
 
@@ -189,7 +190,7 @@
 </section>
 
 <!--/// Skills section ///-->
-<section>
+<section id="skills">
     <div>
         <h1>Skills</h1>
         <hr>
@@ -244,7 +245,7 @@
 </section>
 
 <!--/// project section ///-->
-<section>
+<section id="projects">
     <div>
         <h1>Projects</h1>
         <hr>
@@ -279,7 +280,10 @@
             </button>
         </a>
     </div>
+    <br><br>
 </section>
+
+
 
 </body>
 </html>
