create assignments section

--- a/index.html
+++ b/index.html
@@ -283,7 +283,17 @@
     <br><br>
 </section>
 
+<!--/// assignment section ///-->
+<section>
+    <div>
+        <h1>Assignments</h1>
+        <hr>
+        <br>
+    </div>
 
+
+
+</section>
 
 </body>
 </html>
