add assignment categories assignments section

--- a/index.html
+++ b/index.html
@@ -291,7 +291,75 @@
         <br>
     </div>
 
-
+    <div>
+        <h3>Assignment 01</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 02</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 03</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 04</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <div>
+        <h3>Assignment 05</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 06</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 07</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 08</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 09</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
+    <div>
+        <h3>Assignment 10</h3>
+        <div>
+            <a href="">click here</a>
+        </div>
+    </div>
+    <br>
 
 </section>
 
