create gallery section

--- a/index.html
+++ b/index.html
@@ -363,5 +363,15 @@
 
 </section>
 
+<!--gallery section-->
+<section>
+    <div>
+        <h1>Gallery</h1>
+        <hr>
+        <br>
+    </div>
+
+</section>
+
 </body>
 </html>
