add images in gallery section

--- a/index.html
+++ b/index.html
@@ -370,7 +370,16 @@
         <hr>
         <br>
     </div>
-
+    <div>
+        <img src="../assets/Gallery-section/galleryP1.png"title="gallery 1"alt="gallery-image01"width="200"height="600">
+        <img src="../assets/Gallery-section/galleryP2.png"title="gallery 2"alt="gallery-image02"width="200"height="600">
+        <img src="../assets/Gallery-section/gallery3JPG"title="gallery 3"alt="gallery-image03"width="200"height="250">
+        <img src="../assets/Gallery-section/galleryP4.png"title="gallery 4"alt="gallery-image04"width="200"height="350">
+        <img src="../assets/Gallery-section/gallery5.JPG"title="gallery 5"alt="gallery-image05"width="400"height="250">
+        <div>
+            SANKETH
+        </div>
+    </div>
 </section>
 
 </body>
