navigate in assignment & gallery section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="#edu">Education</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="">Assingment</a>
-        <a href="">Gallery</a>
+        <a href="#assignments">Assingment</a>
+        <a href="#gallery">Gallery</a>
         <a href="">Contact </a>
     </nav>
     <br>
@@ -284,7 +284,7 @@
 </section>
 
 <!--/// assignment section ///-->
-<section>
+<section id="assignments">
     <div>
         <h1>Assignments</h1>
         <hr>
@@ -363,8 +363,8 @@
 
 </section>
 
-<!--gallery section-->
-<section>
+<!--/// gallery section ///-->
+<section id="gallery">
     <div>
         <h1>Gallery</h1>
         <hr>
@@ -381,6 +381,8 @@
         </div>
     </div>
 </section>
+
+
 
 </body>
 </html>
