create contact section

--- a/index.html
+++ b/index.html
@@ -382,7 +382,59 @@
     </div>
 </section>
 
+<!--/// contact section ///-->
+<section>
+    <div>
+        <h1>Contact Me</h1>
+        <hr>
+        <br>
+    </div>
+    <!--left side-->
+    <div>
+        <div>
+            <img src="../assets/Contact-section/user.png"title="user"alt="user-icon"width="40"height="40">
+            <h3>Uvindu Weerasinghe</h3>
+        </div>
+        <br>
+        <div>
+            <img src="../assets/Contact-section/tele.png"title="tel"alt="tel-icon"width="40"height="40">
+            <h3>+94764307855</h3>
+        </div>
+        <br>
+        <div>
+            <img src="../assets/Contact-section/mail.png"title="email"alt="email-icon"width="40"height="40">
+            <h3>uvindusanketh470@gmail.com</h3>
+        </div>
+        <br>
+        <div>
+            <img src="../assets/Contact-section/address.png"title="location"alt="location-icon"width="40"height="40">
+            <h3>291/1,Yongammulla,yakkala.</h3>
+        </div>
+        <br>
+    </div>
+    <!--right side-->
+    <div>
+        <form>
+            <div>
+                <input type="text" id="name" placeholder="Name">
+            </div>
+            <br>
+            <div>
+                <input type="email" id="email" placeholder="Email">
+            </div>
+            <br>
+            <div>
+                <textarea placeholder="Message" id="message" cols="50" rows="10"></textarea>
+            </div>
+            <br>
+            <div>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+    <br>
 
+</section>
 
 </body>
 </html>
