add bottom social link and navigate in contact section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#projects">Projects</a>
         <a href="#assignments">Assingment</a>
         <a href="#gallery">Gallery</a>
-        <a href="">Contact </a>
+        <a href="#contact">Contact </a>
     </nav>
     <br>
 
@@ -383,7 +383,7 @@
 </section>
 
 <!--/// contact section ///-->
-<section>
+<section id="contact">
     <div>
         <h1>Contact Me</h1>
         <hr>
@@ -433,8 +433,26 @@
         </form>
     </div>
     <br>
+    <!--section bottom-->
+    <div>
+        <a href="https://www.facebook.com/profile.php?id=100078340666549&mibextid=sCpJLy">
+            <img src="../assets/Contact-section/facebook.png"title="facebook"alt="facebook-icon"width="40"height="40">
+        </a>
+        <a href="https://www.linkedin.com/in/uvindu-weerasinghe-793916283/">
+            <img src="../assets/Contact-section/linkedin.png"title="linkedin"alt="linkedin-icon"width="40"height="40">
+        </a>
+        <a href="https://whatsapp.com/channel/0029VaFnqH590x2pSkvBgr2x">
+            <img src="../assets/Contact-section/whatsapp.png"title="whatsapp"alt="whatsapp-icon"width="40"height="40">
+        </a>
+        <a href="https://medium.com/@uvindusanketh470">
+            <img src="../assets/Contact-section/medium.png"title="medium"alt="medium-icon"width="40"height="40">
+        </a>
+    </div>
+    <br>
 
 </section>
+
+
 
 </body>
 </html>
