create footer and done

--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@
 
 </section>
 
+<!--/// footer ///-->
+<footer>
+    Copyright © 2024 Uvindu Sanketh . All right reserved.
+</footer>
 
 
 </body>
