--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Hi!, I’m Uvindu Sanketh. I’m young and highly active enthusiast and a Full Stack Developer from Sri Lanka.">
+    <meta name="keywords" content="Uvindu Sanketh Weerasinghe software engineer fullstack developer programming portfolio">
     <meta name="author" content="Uvindu Sanketh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uvindu Sanketh</title>
