create stylesheet and link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Uvindu Sanketh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uvindu Sanketh</title>
+    <link rel="stylesheet" href="/../assets/normalize.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
